fix: Fix popover z-index

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -351,3 +351,7 @@ footer {
     z-index: 2;
     right: calc(50% - 50px);
 }
+
+.popover {
+    z-index: 2 !important;
+}
